fix: admin tag list does not wrap (#105)

--- a/resources/less/admin.less
+++ b/resources/less/admin.less
@@ -30,4 +30,10 @@
       }
     }
   }
+
+  .SelectTagsSettingComponent {
+    .TagsLabel {
+      white-space: wrap;
+    }
+  }
 }
